--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ html, body {
     background-image: url("img/Poitiers2.jpg");
     background-size: cover;
     margin: 20px;
-    height: 350px;
+    height: auto;
 }
 
 h1 {
@@ -87,8 +87,8 @@ fieldset {
 }
 
 @media screen and (max-width: 500px) {
-    .header {width: 100%; height: auto; float: none; margin-top: 20px; display: inline-block; text-align: center; } 
-    .header-nav {width: 100%; height: auto; float: none; margin-top: 20px; display: inline-block; }
+    .header {width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; align-content: center;} 
+    .header-nav {width: 100%; height: auto; float: none; margin-top: 20px; padding: 20px; display: flex; flex-direction:column; align-items: baseline;}
     fieldset {width: 100%; height: auto; float: none; margin-top: 20px; display: inline-block; text-align: center; }
-    .footer {width: 100%; height: auto; float: none; margin-top: 20px; display: inline-block; text-align: center; font-weight: bold; color: #ff8800; text-shadow: 1px 1px 1px black;}
+    .footer {width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; font-weight: bold; color: #ff8800; text-shadow: 2px 2px 2px black;}
 }
