--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ fieldset {
     text-shadow: 1px 1px 1px black;
 }
 
-@media screen and (max-width: 500px) {
-    .header {width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; align-content: center;} 
+@media screen and (max-width:1000px) {
+    .header {width: 100%; height: auto; float: none; margin-top: 20px; margin-bottom: 20px; display: flex; flex-direction:column; align-content: center;} 
     .header-nav {width: 100%; height: auto; float: none; margin-top: 20px; padding: 20px; display: flex; flex-direction:column; align-items: baseline;}
     fieldset {width: 100%; height: auto; float: none; margin-top: 20px; display: inline-block; text-align: center; }
     .footer {width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; font-weight: bold; color: #ff8800; text-shadow: 2px 2px 2px black;}
