--- a/style.css
+++ b/style.css
@@ -70,6 +70,8 @@ fieldset {
     background-image: url("img/Poitiers.jpg");
     height: 350px;
     padding-left: 20px;
+    padding-top: 10px;
+    line-height: 1.6;
     justify-content: space-around;
     align-items: top;
     box-shadow: 0 0 30px rgb(207, 46, 46);
@@ -86,9 +88,13 @@ fieldset {
     text-shadow: 1px 1px 1px black;
 }
 
+footer span {
+    flex-direction: column;
+}
 @media screen and (max-width:1000px) {
     .header {width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; align-content: center;} 
     .header-nav {width: 100%; height: auto; float: none; margin-top: 20px; padding: 20px; display: flex; flex-direction:column; align-items: baseline; }
     fieldset {width: 100%; height: auto; float: none; margin-top: 20px; display: inline-block; text-align: center; }
     .footer {width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; font-weight: bold; color: #ff8800; text-shadow: 2px 2px 2px black;}
+    footer span {margin-top: 50px; }
 }
