--- a/style.css
+++ b/style.css
@@ -95,8 +95,8 @@ footer span {
     .header {width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; align-content: center;} 
     .header-nav {width: 100%; height: auto; float: none; margin-top: 20px; padding: 20px; display: flex; flex-direction:column; align-items: baseline; }
     fieldset {width: 100%; height: auto; float: none; margin-top: 20px; display: inline-block; text-align: center; }
-    .footer {width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; font-weight: bold; color: #ff8800; text-shadow: 2px 2px 2px black;}
+    .footer {font-size: 80%; width: 100%; height: auto; float: none; margin-top: 20px; display: flex; flex-direction:column; font-weight: bold; color: #ff8800; text-shadow: 2px 2px 2px black;}
     footer span {margin-top: 50px; }
-    .footer span a {color: #2a9669; text-shadow: 2px 2px 2px black; }
+    .footer span a {color:#2a9669; text-shadow: 2px 2px 2px black; }
     .footer span a:hover {color:chartreuse; text-shadow: 2px 2px 2px black;}
 }
